grammar.js
    source_file: ($) =>
      seq(
        optional($.shebang),
        repeat($.file_annotation),
        optional($.package_header),
        repeat($.import),
        repeat(seq($.statement, $._semi))
      ),

    class_declaration: ($) =>
      prec.right(
        seq(
          optional($.modifiers),
          choice('class', seq(optional('fun'), 'interface')),
          field('name', $.identifier),
          optional($.type_parameters),
          optional($.primary_constructor),
          optional(seq(':', $.delegation_specifiers)),
          optional($.type_constraints),
          optional(choice($.class_body, $.enum_class_body))
        )
      ),

    property_declaration: ($) =>
      prec.right(
        seq(
          optional($.modifiers),
          choice('val', 'var'),
          optional($.type_parameters),
          optional(seq($._receiver_type, optional('.'))),
          choice($.variable_declaration, $.multi_variable_declaration),
          optional($.type_constraints),
          optional(choice(seq('=', $.expression), $.property_delegate)),
          optional(';'),
          optional(choice(seq($.getter, optional($.setter)), seq($.setter, optional($.getter))))
        )
      ),

    variable_declaration: ($) => prec(1, seq(repeat($.annotation), $._identifier, optional(seq(':', $.type)))),

    block: ($) => seq('{', optional($._statements), '}'),

    class_body: ($) => seq('{', repeat(seq($.class_member_declaration, $._class_member_semi)), '}'),

    value_arguments: ($) => seq('(', optionalCommaSep1($.value_argument), ')'),

    value_argument: ($) => seq(optional(seq($._identifier, '=')), optional('*'), $.expression),

    _statements: ($) => seq($.statement, repeat(seq($._semi, $.statement)), optional($._semi)),

    annotation: ($) =>
      choice(
        seq('@', optional($.use_site_target), $._unescaped_annotation),
        seq('@', optional($.use_site_target), '[', repeat1($._unescaped_annotation), ']')
      ),

    _unescaped_annotation: ($) => choice($.constructor_invocation, $.type),

    user_type: ($) => seq(optional($.type_modifiers), sep1($._simple_user_type, '.')),

    _simple_user_type: ($) => prec.right(seq($._identifier, optional($.type_arguments))),

    _receiver_type: ($) =>
      seq(optional($.type_modifiers), choice($.user_type, 'dynamic', $.parenthesized_type, $.nullable_type)),

    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          $.expression,
          optional($.type_arguments),
          choice($.value_arguments, seq(optional($.value_arguments), $.annotated_lambda))
        )
      ),

    annotated_lambda: ($) => seq(repeat($.annotation), optional($.label), $.lambda_literal),

    lambda_literal: ($) =>
      seq('{', optional(seq(optional($.lambda_parameters), '->')), optionalSep1($.statement, $._semi), '}'),

    when_expression: ($) => seq('when', optional($.when_subject), '{', repeat($.when_entry), '}'),

    when_subject: ($) =>
      seq('(', optional(seq(repeat($.annotation), 'val', $.variable_declaration, '=')), $.expression, ')'),

    when_entry: ($) =>
      seq(
        choice(seq(commaSep1(field('condition', $._when_condition)), optional(',')), 'else'),
        '->',
        field('body', choice($.block, $.statement)),
        optional($._semi)
      ),

    _when_condition: ($) => choice($.expression, $.range_test, $.type_test),

    try_expression: ($) =>
      seq('try', $.block, choice(seq(repeat1($.catch_block), optional($.finally_block)), $.finally_block)),

    finally_block: ($) => seq('finally', $.block),

    number_literal: () => {
      const separator = '_';
      const decimal = /[0-9]+/;
      const hex = /[0-9a-fA-F]/;
      const bin = /[01]/;
      const decimalDigits = seq(repeat1(decimal), repeat(seq(separator, repeat1(decimal))));
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const binDigits = seq(repeat1(bin), repeat(seq(separator, repeat1(bin))));

      return token(
        seq(choice(decimalDigits, seq(/0[xX]/, hexDigits), seq(/0[bB]/, binDigits)), optional(/([lL]|[uU][lL]?)/))
      );
    },

    _identifier: ($) => choice($.identifier, $._reserved_identifier),

    identifier: () => token(choice(/[\p{L}_][\p{L}_\p{Nd}]*/u, /`[^\r\n`]+`/)),
